defaults/kubernetes/kgateway/kustomize/default.gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: new-default-gateway
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      name: default-gw-params
      group: gateway.kgateway.dev
      kind: GatewayParameters
  listeners:
    - name: web
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    # - name: websecure
    #   port: 8443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: wildcard.chezmoi.sh
# spec:
#   dnsNames:
#     - '*.chezmoi.sh'
#   duration: 2160h0m0s # 90 days
#   issuerRef:
#     kind: ClusterIssuer
#     name: letsencrypt
#   renewBefore: 360h0m0s # 15 days
#   secretName: wildcard.chezmoi.sh-certificate
